--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,15 +11,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.24'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24'
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build server
+        run: go build -v ./cmd/server/main.go
 
-    - name: Test
-      run: go test -v ./...
+      - name: Test
+        run: go test -v ./...
