--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,3 +25,6 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+
+      - run: "go test -coverprofile=coverage.out -covermode=count ./..."
+      - uses: seriousben/go-patch-cover-action@v1
