--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+    
+permissions:
+  contents: write
+  pull-requests: write
+  
 jobs:
 
   build:
